Updated SecurityConfig with exact CORS headers and Vercel URL